# goit-pythonweb-hw-10

./: .gitignore  alembic.ini  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 16485e4e3b4c_синхронізація_стану.py  4a2ec3dce53c_add_avatar_column_to_users.py  4c121f35a17b_added_avatar.py  f75955883273_remove_created_updated_at_columns_in_.py
postgres-data/: postmaster.pid
postgres-data/base/13481/: 1247  1249  1259  16385  16387  16393  16394  16396  16398  16400  16410  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
postgres-data/base/16384/: pg_internal.init
postgres-data/global/: 1260  pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
postgres-data/pg_xact/: 0000
src/config/: config.ini  config.py
src/database/: db.py  models.py
src/repository/: auth.py  contact.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  users.py
src/services/: auth.py  email.py
